Removed zoom from options page to prevent image distortion.

--- a/pages/options.css
+++ b/pages/options.css
@@ -3,15 +3,15 @@
   --c-box: #fff1;
   --c-foreground: #eee;
   --c-primary: #0cf;
+  --max-width: 1088px;
 }
 
 body {
   background: #111;
   color: var(--c-foreground);
   font-family: Verdana, sans-serif;
-  font-size: 13.4px;
+  font-size: 16px;
   margin: 0;
-  zoom: 1.35;
 }
 
 a {
@@ -24,23 +24,24 @@ a:hover {
   color: var(--c-primary);
   text-decoration: none;
 }
+h1,
 h2 {
   color: var(--c-primary);
-  font-size: 16px;
-  margin: 20px 0 15px 0;
 }
-li {
-  padding: 2px 0;
+
+.primary {
+  color: var(--c-primary);
 }
 
 #page {
   background: #222;
   border-radius: 20px;
   border: 2px solid var(--c-box);
-  margin: 0 auto 10px;
-  padding: 30px;
+  box-sizing: border-box;
+  margin: 0 auto 8px;
+  max-width: var(--max-width);
+  padding: 32px;
   text-align: left;
-  width: 800px;
 }
 
 #title {
@@ -77,16 +78,20 @@ textarea:focus {
 
 input[type='text'] {
   color: var(--c-foreground);
-  margin-right: 10px;
-  padding: 3px;
+  margin-right: 8px;
+  padding: 4px;
   text-align: center;
-  width: 38px;
+  width: 40px;
 }
 
 textarea {
   color: var(--c-foreground);
-  padding: 10px;
-  width: 770px;
+  padding: 8px;
+  width: 100%;
+}
+
+input[type='checkbox'] {
+  margin: 8px 8px 8px 0;
 }
 
 #save {
@@ -117,7 +122,7 @@ button:hover {
   color: #666;
   cursor: help;
   font-size: 80%;
-  padding-left: 10px;
+  padding-left: 8px;
 }
 
 label[title],
@@ -158,19 +163,19 @@ label[title],
 
 hr {
   background-color: var(--c-box);
-  border-radius: 10px;
+  border-radius: 12px;
   border: none;
-  height: 20px;
-  margin: 40px 0;
+  height: 24px;
+  margin: 48px 0;
 }
 
 #footer li {
-  margin: 5px 0;
+  margin: 8px 0;
 }
 
 #test {
   margin: 0 auto;
-  width: 800px;
+  max-width: var(--max-width);
 }
 #test div {
   margin: 20px 0;
@@ -178,13 +183,13 @@ hr {
 
 #version-container {
   background: var(--c-box);
-  border-radius: 5px;
+  border-radius: 6px;
   color: #222;
   font-size: 22px;
   font-style: italic;
   font-weight: normal;
-  height: 10px;
-  margin-top: 5px;
+  height: 12px;
+  margin-top: 6px;
   text-align: center;
   width: 300px;
 }
